# jellyhaj

./: .envrc  .gitignore  Cargo.toml  Readme.md  build.rs  flake.nix  hm-module.md  hm-module.nix  jellyhaj-incremental.nix  jellyhaj-test-server.nix  jellyhaj.nix
.github/workflows/: cargo.yml  fmt.yml  nix.yml  test.yml
.sqlx/: query-0168a998300aae1150a68cd0a76cb43523f12d6c9aa6d7cc95114d60109a725e.json  query-4c67298f5e7e3b193218f25c765d046f8f00cd14d03d3e9cc6cdbf97d0ca9d5e.json  query-568285f7315edd5383d6eec6a3a88ebd11248a7f09b8e43fd3153cfe2c4fb43a.json  query-77522949349fd568fc2b8be0a25d42ef48abe5b30e7cf6ad92fd373b215fa0f4.json  query-b4194f8c396a6fe6d17952eb05ed79995aa73adb45e0a2e27c90010908940384.json  query-ff998c0907d0a55bdadbdaadc69c097a011126290c854b59b0e32a7c0d84deff.json
async-task/: Cargo.toml
async-task/src/: lib.rs
checkbox/: Cargo.toml
config/: Cargo.toml  config.toml  effects.toml  keybinds.toml
config/src/: cache.rs  effects.rs  keybind_defs.rs  keybinds.rs  lib.rs
context/: Cargo.toml
context/src/: lib.rs
entries/: Cargo.toml
event-collector/: Cargo.toml  open-events.nu
event-collector/src/: main.rs
event-listener/: Cargo.toml
event-listener/src/: lib.rs
event-socket/: Cargo.toml
event-socket/src/: main.rs
fetch/: Cargo.toml
fetch/src/: lib.rs
form-test/: Cargo.toml  res
form-test/src/: lib.rs
home-screen/: Cargo.toml
image-cache/: Cargo.toml
image-cache/src/: lib.rs
image-widget/: Cargo.toml
image-widget/src/: available.rs  cache.rs  fetch.rs  lib.rs
item-view/: Cargo.toml
item-view/src/: item_details.rs
jellyfin-rs/: Cargo.toml
jellyfin-rs/src/: activity.rs  auth.rs  connect.rs  image.rs  items.rs  lib.rs  library.rs  playback_status.rs  quick_connect.rs  request.rs  scheduled_tasks.rs  session.rs  socket.rs  user.rs  user_views.rs
jellyfin-rs/src/socket/: connect.rs  mod.rs  poll_socket.rs
jellyhaj-core/: Cargo.toml
jellyhaj-core/src/: context.rs  entries.rs  lib.rs  render.rs  state.rs  term.rs
jellyhaj-core/src/render/: erased.rs  list.rs
jellyhaj-test-server/: default.nix  files.nix  group  network.xml  passwd  run.nu  setup-jellyfin.sh
keybinds/: Cargo.toml
keybinds-derive/: Cargo.toml
keybinds-derive-impl/: Cargo.toml
keybinds-derive-impl/src/: command.rs  keybind_config.rs
keybinds-derive/src/: lib.rs
keybinds/src/: lib.rs  parse_config.rs
layout-widget/: Cargo.toml
layout-widget/src/: grid.rs  lib.rs  list.rs  screen.rs
libmpv-rs/: Cargo.toml
libmpv-rs/libmpv-sys/: Cargo.toml  build.rs
libmpv-rs/libmpv-sys/src/: lib.rs
libmpv-rs/src/: lib.rs  tests.rs
libmpv-rs/src/mpv/: errors.rs  events.rs  mod.rs  node.rs
library-view/: Cargo.toml
log-screen/: Cargo.toml
login/: Cargo.toml
login/src/: lib.rs
migrations/: 20260424201157_unique_id.sql  20260424201202_creds.sql
player/: Cargo.toml
player-core/: Cargo.toml
player-core/src/: create.rs  lib.rs  log.rs  mpv_stream.rs  poll.rs  state.rs
player-jellyfin/: Cargo.toml
player-jellyfin/src/: lib.rs
player-mpris/: Cargo.toml
player-mpris/src/: lib.rs  media_player.rs  player.rs  track_list.rs  types.rs
player/src/: fetch_items.rs  lib.rs
ratatui-fallible-widget/: Cargo.toml
ratatui-fallible-widget/src/: lib.rs
refresh-item/: Cargo.toml
serde-json-ratatui/: Cargo.toml
spawn/: Cargo.toml
spawn/src/: lib.rs  pool.rs  spawner.rs
src/: lib.rs  main.rs
stats-data/: Cargo.toml
stats-view/: Cargo.toml
tabs-test/: Cargo.toml
tabs-test/src/: lib.rs
user-view/: Cargo.toml
views/error/: Cargo.toml
views/error/src/: lib.rs
views/fetch/: Cargo.toml
views/fetch/src/: lib.rs
views/home-screen/: Cargo.toml
views/home-screen/src/: fetch.rs  lib.rs
views/inspect/: Cargo.toml
views/inspect/src/: lib.rs
views/item-details/: Cargo.toml
views/item-details/src/: lib.rs
views/log/: Cargo.toml
views/log/src/: lib.rs
views/login/: Cargo.toml
views/login/src/: cf:w  lib.rs
views/player/: Cargo.toml
views/player/src/: lib.rs
views/quick-connect/: Cargo.toml
views/quick-connect/src/: lib.rs
views/refresh-item/: Cargo.toml
views/refresh-item/src/: lib.rs
views/stats/: Cargo.toml
views/stats/src/: lib.rs
widgets/core/: Cargo.toml
widgets/core/src/: async_task.rs  flatten.rs  item.rs  jellyhaj.rs  lib.rs  mapper.rs  outer.rs  term.rs
widgets/entry/: Cargo.toml
widgets/entry/src/: lib.rs  map.rs
widgets/error/: Cargo.toml
widgets/error/src/: lib.rs
widgets/fetch/: Cargo.toml
widgets/fetch/src/: lib.rs
widgets/form/: Cargo.toml
widgets/form-derive/: Cargo.toml
widgets/form-derive-impl/: Cargo.toml
widgets/form-derive-impl/src/: lib.rs  selection.rs
widgets/form-derive/src/: lib.rs
widgets/form/src/: button.rs  checkbox.rs  form.rs  label.rs  label_block.rs  lib.rs  offset.rs  secret_field.rs  selection.rs  text_field.rs
widgets/home-screen/: Cargo.toml
widgets/home-screen/src/: lib.rs
widgets/image/: Cargo.toml
widgets/image/src/: cache.rs  fetch.rs  lib.rs
widgets/inspect/: Cargo.toml
widgets/inspect/src/: lib.rs
widgets/item-details/: Cargo.toml
widgets/item-details/src/: #  children.rs  item_list_details.rs  lib.rs  overview.rs
widgets/item-grid/: Cargo.toml
widgets/item-grid/src/: lib.rs
widgets/item-list/: Cargo.toml
widgets/item-list/src/: lib.rs
widgets/item-screen/: Cargo.toml
widgets/item-screen/src/: lib.rs
widgets/keybinds/: Cargo.toml
widgets/keybinds/src/: action.rs  click.rs  lib.rs  render.rs
widgets/loading/: Cargo.toml
widgets/loading/src/: lib.rs
widgets/log/: Cargo.toml
widgets/log/src/: lib.rs
widgets/login/: Cargo.toml
widgets/login/src/: lib.rs  render.rs
widgets/player/: Cargo.toml
widgets/player/src/: lib.rs
widgets/refresh-item/: Cargo.toml
widgets/refresh-item/src/: lib.rs
widgets/render/: Cargo.toml
widgets/render/src/: lib.rs
widgets/stats/: Cargo.toml
widgets/stats/src/: lib.rs
widgets/tabs/: Cargo.toml
widgets/tabs-macro/: Cargo.toml
widgets/tabs-macro/src/: assert.rs  enum_ty.rs  lib.rs  parse.rs  tabbed.rs
widgets/tabs/src/: lib.rs
(+21 files in other folders)
