[dependencies]
futures-util = {features = ["sink"], workspace = true}
spawn = {path = "../spawn", version = "0.1.0"}
color-eyre.workspace = true
futures-channel.workspace = true
futures-intrusive.workspace = true
pin-project-lite.workspace = true
tracing.workspace = true

[package]
edition = "2024"
name = "jellyhaj-async-task"
version = "0.1.0"
