[dependencies]
color-eyre = {workspace = true}
dirs = {workspace = true}
keybinds = {path = "../keybinds"}
libmpv = {path = "../libmpv-rs"}
log = {workspace = true}
serde = {workspace = true}
sqlx = {workspace = true}
tokio = {features = ["macros", "rt", "time"], workspace = true}
toml = {workspace = true}
tracing = {workspace = true}

[package]
edition = "2024"
name = "config"
version = "0.1.0"
