[dependencies]
color-eyre = {workspace = true}
crossterm.workspace = true
dirs = {workspace = true}
keybinds = {path = "../keybinds"}
libmpv = {path = "../libmpv-rs"}
log = {workspace = true}
ratatui-core.workspace = true
serde = {workspace = true}
sqlx = {workspace = true}
tokio = { features = ["macros", "process", "rt"], workspace = true }
toml = {workspace = true}
tracing = {workspace = true}
valuable.workspace = true
tachyonfx.workspace = true
nom.workspace=true
nix.workspace=true

[package]
edition = "2024"
name = "config"
version = "0.1.0"
