[package]
name = "jellyhaj-event-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
config = { version = "0.1.0", path = "../config" }
futures-util.workspace = true
jellyfin = { version = "0.1.4", path = "../jellyfin-rs" }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "signal"] }
toml.workspace = true
whoami.workspace = true
tracing-subscriber = {workspace=true}
