[dependencies]
config = {path = "../config", version = "0.1.0"}
jellyfin = {path = "../jellyfin-rs", version = "0.1.4"}
tokio = {features = ["macros", "rt", "signal"], workspace = true}
tracing-subscriber = {workspace = true}
clap.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
serde_json.workspace = true
toml.workspace = true
whoami.workspace = true

[package]
edition = "2024"
name = "jellyhaj-event-collector"
version = "0.1.0"
