[dependencies]
jellyfin = {path = "../jellyfin-rs"}
jellyhaj-async-task = {path = "../async-task"}
spawn = {path = "../spawn"}
tokio = {features = ["macros"], workspace = true}
color-eyre.workspace = true
futures-channel.workspace = true
futures-intrusive.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[package]
edition = "2024"
name = "jellyhaj-event-listener"
version = "0.1.0"
