[dependencies]
color-eyre = {workspace = true}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs"}
jellyhaj-core = {path = "../jellyhaj-core"}
keybinds = {path = "../keybinds"}
ratatui = {workspace = true}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget"}
tokio = {features = ["macros"], workspace = true}
tracing = {workspace = true}

[package]
edition = "2024"
name = "fetch"
version = "0.1.0"
