[dependencies]
color-eyre = {workspace = true}
entries = {path = "../entries"}
fetch = {path = "../fetch"}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs"}
jellyhaj-core = {path = "../jellyhaj-core"}
keybinds = {path = "../keybinds"}
ratatui = {workspace = true}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget"}
tokio = {features = ["macros"], workspace = true}
tracing = {workspace = true}

[package]
edition = "2024"
name = "home-screen"
version = "0.1.0"
