[dependencies]
aws-lc-rs = {workspace = true}
base64 = {workspace = true}
bytes = {workspace = true}
color-eyre = {workspace = true}
futures-core = {workspace = true}
futures-sink = {workspace = true}
futures-util = {workspace = true}
http = {workspace = true}
hyper = {workspace = true}
hyper-util = {workspace = true}
pin-project-lite = {workspace = true}
rustls-native-certs = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_urlencoded = {workspace = true}
tokio = {features = ["time"], workspace = true}
tokio-rustls = {workspace = true}
tokio-websockets = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tokio = {features = ["macros"], version = "1.28.2"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[package]
categories = ["api-bindings"]
description = "Bindings to the jellyfin web API"
edition = "2024"
homepage = "https://github.com/sargon64/jellyfin-rs"
include = [
  "**/*.rs",
  "Cargo.toml",
  "LICENSE"
]
keywords = ["jellyfin", "media", "streaming"]
license = "MIT"
name = "jellyfin"
repository = "https://github.com/sargon64/jellyfin-rs"
version = "0.1.4"
