[dependencies]
color-eyre = {workspace = true}
config = {path = "../config"}
crossbeam-epoch = "0.9.18"
either.workspace = true
futures-channel.workspace = true
futures-intrusive.workspace = true
futures-util.workspace = true
image = {workspace = true}
image-cache = { version = "0.1.0", path = "../image-cache" }
jellyfin = {path = "../jellyfin-rs"}
jellyhaj-event-listener = { version = "0.1.0", path = "../event-listener" }
jellyhaj-widgets-core = {path = "../widgets/core", version = "0.1.0"}
keybinds = { path = "../keybinds" }
libmpv = {default-features = false, path = "../libmpv-rs"}
parking_lot = {workspace = true}
pin-project-lite.workspace = true
player-core = {path = "../player-core"}
ratatui = {workspace = true}
ratatui-image = {workspace = true}
spawn = {path = "../spawn", version = "0.1.0"}
sqlx = {workspace = true}
stats-data = {path = "../stats-data", version = "0.1.0"}
tokio = {workspace = true}
tracing = {workspace = true}
valuable.workspace = true

[package]
edition = "2024"
name = "jellyhaj-core"
version = "0.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
