[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing"], workspace = true}

[dev-dependencies]
pretty_assertions = "1.4.1"

[package]
edition = "2024"
name = "keybinds-derive-impl"
version = "0.1.0"
