# Copyright (C) 2016  ParadoxSpiral
#
# This file is part of mpv-rs.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA

[badges]
travis-ci = {branch = "master", repository = "https://github.com/ParadoxSpiral/mpv-rs"}

[dependencies]
libmpv-sys = {path = "libmpv-sys"}
parking_lot = {optional = true, workspace = true}
tokio = {features = ["time"], optional = true, workspace = true}
tracing = {optional = true, workspace = true}

[dev-dependencies]
crossbeam = "0.8"

[features]
async = ["dep:parking_lot"]
default = ["render", "tokio"]
render = [] # Enable custom rendering
tokio = ["async", "dep:tokio"]
tracing = ["dep:tracing"]
use-bindgen = ["libmpv-sys/use-bindgen"]

[package]
authors = ["ParadoxSpiral <paradoxspiral@riseup.net>"]
description = "Libmpv abstraction that's easy to use and can play next to all codecs and containers"
edition = "2024"
keywords = ["libmpv", "media", "mpv", "playback"]
license = "LGPL-2.1"
name = "libmpv"
readme = "README.md"
repository = "https://github.com/ParadoxSpiral/libmpv-rs"
version = "2.0.1"
