[dependencies]
entries = {path = "../entries", version = "0.1.0"}
jellyfin = {path = "../jellyfin-rs", version = "0.1.4"}
jellyhaj-core = {path = "../jellyhaj-core", version = "0.1.0"}
keybinds = {path = "../keybinds", version = "0.1.0"}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget", version = "0.1.0"}
tokio = {features = ["sync"], workspace = true}
color-eyre.workspace = true
futures-util.workspace = true
ratatui.workspace = true

[package]
edition = "2024"
name = "library-view"
version = "0.1.0"
