[dependencies]
jellyhaj-core = {path = "../jellyhaj-core", version = "0.1.0"}
keybinds = {path = "../keybinds", version = "0.1.0"}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget", version = "0.1.0"}
tokio = {features = ["time"], workspace = true}
color-eyre.workspace = true
ratatui.workspace = true
tui-logger.workspace = true

[package]
edition = "2024"
name = "log-screen"
version = "0.1.0"
