[dependencies]
color-eyre = {workspace = true}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs"}
jellyhaj-core = {path = "../jellyhaj-core"}
keybinds = {path = "../keybinds"}
ratatui = {workspace = true}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget"}
serde = {workspace = true}
sqlx = {workspace = true}
tokio = {features = ["macros", "process"], workspace = true}
toml = {workspace = true}
tracing = {workspace = true}
whoami = {workspace = true}

[package]
edition = "2024"
name = "login"
version = "0.1.0"
