[dependencies]
color-eyre = {workspace = true}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs"}
libmpv = {default-features = false, features = ["tokio", "tracing", "use-bindgen"], path = "../libmpv-rs"}
parking_lot = {workspace = true}
pin-project-lite = {workspace = true}
spawn = {path = "../spawn"}
tokio = {features = ["macros", "rt", "time"], workspace = true}
tokio-util = {workspace = true}
tracing = {workspace = true}
tracing-core = {workspace = true}

[features]
use-bindgen = ["libmpv/use-bindgen"]

[package]
edition = "2024"
name = "player-core"
version = "0.1.0"
