[dependencies]
color-eyre = {workspace = true}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs", features = ["valuable"]}
libmpv = {default-features = false, features = ["tokio"], path = "../libmpv-rs"}
parking_lot = {workspace = true}
pin-project-lite = {workspace = true}
spawn = {path = "../spawn"}
tokio = {features = ["macros", "rt", "time"], workspace = true}
tokio-util = {workspace = true}
tracing = {workspace = true}
tracing-core = {workspace = true}
valuable.workspace = true

[features]
use-bindgen = ["libmpv/use-bindgen"]
tracing = ["libmpv/tracing"]

[package]
edition = "2024"
name = "player-core"
version = "0.1.0"
