[dependencies]
color-eyre = {workspace = true}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs"}
player-core = {path = "../player-core"}
spawn = {path = "../spawn"}
tokio = {features = ["rt"], workspace = true}
tracing = {workspace = true}

[package]
edition = "2024"
name = "player-jellyfin"
version = "0.1.0"
