[dependencies]
color-eyre = {workspace = true}
fetch = {path = "../fetch"}
futures-util = {workspace = true}
jellyfin = {path = "../jellyfin-rs"}
jellyhaj-core = {path = "../jellyhaj-core"}
keybinds = {path = "../keybinds"}
player-core = {path = "../player-core"}
ratatui = {workspace = true}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget"}
spawn = {path = "../spawn"}
tokio = {features = ["rt"], workspace = true}
tracing = {workspace = true}

[features]
use-bindgen = ["player-core/use-bindgen"]

[package]
edition = "2024"
name = "player"
version = "0.1.0"
