[dependencies]
checkbox = {path = "../checkbox", version = "0.1.0"}
fetch = {path = "../fetch", version = "0.1.0"}
jellyfin = {path = "../jellyfin-rs", version = "0.1.4"}
jellyhaj-core = {path = "../jellyhaj-core", version = "0.1.0"}
keybinds = {path = "../keybinds", version = "0.1.0"}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget", version = "0.1.0"}
color-eyre.workspace = true
futures-util.workspace = true
ratatui.workspace = true

[package]
edition = "2024"
name = "refresh-item"
version = "0.1.0"
