[dependencies]
color-eyre = {workspace = true}
parking_lot = {workspace = true}
pin-project-lite = {workspace = true}
tokio = {features = ["rt", "tracing"], workspace = true}
tokio-util = {workspace = true}
tracing = {workspace = true}

[lints.rust]
unexpected_cfgs = {check-cfg = ['cfg(tokio_unstable)'], level = "warn"}

[package]
edition = "2024"
name = "spawn"
version = "0.1.0"
