[dependencies]
jellyhaj-core = {path = "../jellyhaj-core", version = "0.1.0"}
keybinds = {path = "../keybinds", version = "0.1.0"}
ratatui-fallible-widget = {path = "../ratatui-fallible-widget", version = "0.1.0"}
stats-data = {path = "../stats-data", version = "0.1.0"}
tokio = {features = ["time"], workspace = true}
color-eyre.workspace = true
ratatui.workspace = true

[package]
edition = "2024"
name = "stats-view"
version = "0.1.0"
