[package]
name = "tabs-test"
version = "0.1.0"
edition = "2024"

[dependencies]
jellyhaj-core = { version = "0.1.0", path = "../jellyhaj-core" }
jellyhaj-image = { version = "0.1.0", path = "../widgets/image" }
jellyhaj-tabs-widget = { version = "0.1.0", path = "../widgets/tabs" }
jellyhaj-widgets-core = { version = "0.1.0", path = "../widgets/core" }

[lints]
workspace = true
