[package]
name = "jellyhaj-error-view"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
jellyhaj-core = { version = "0.1.0", path = "../../jellyhaj-core" }
jellyhaj-error-widget = { version = "0.1.0", path = "../../widgets/error" }
jellyhaj-keybinds-widget = { version = "0.1.0", path = "../../widgets/keybinds" }
jellyhaj-render-widgets = { version = "0.1.0", path = "../../widgets/render" }
tracing.workspace = true
