[dependencies]
jellyhaj-core = {path = "../../jellyhaj-core", version = "0.1.0"}
jellyhaj-error-widget = {path = "../../widgets/error", version = "0.1.0"}
jellyhaj-keybinds-widget = {path = "../../widgets/keybinds", version = "0.1.0"}
color-eyre.workspace = true
tracing.workspace = true
jellyhaj-widgets-core = { version = "0.1.0", path = "../../widgets/core" }

[package]
edition = "2024"
name = "jellyhaj-error-view"
version = "0.1.0"
