[package]
name = "jellyhaj-fetch-view"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
jellyhaj-core = { version = "0.1.0", path = "../../jellyhaj-core" }
jellyhaj-keybinds-widget = { version = "0.1.0", path = "../../widgets/keybinds" }
jellyhaj-loading-widget = { version = "0.1.0", path = "../../widgets/loading" }
jellyhaj-render-widgets = { version = "0.1.0", path = "../../widgets/render" }
keybinds = { version = "0.1.0", path = "../../keybinds" }
ratatui.workspace = true
spawn = { version = "0.1.0", path = "../../spawn" }
tokio.workspace = true
