[dependencies]
jellyhaj-core = {path = "../../jellyhaj-core", version = "0.1.0"}
jellyhaj-keybinds-widget = {path = "../../widgets/keybinds", version = "0.1.0"}
jellyhaj-loading-widget = {path = "../../widgets/loading", version = "0.1.0"}
jellyhaj-render-widgets = {path = "../../widgets/render", version = "0.1.0"}
keybinds = {path = "../../keybinds", version = "0.1.0"}
spawn = {path = "../../spawn", version = "0.1.0"}
color-eyre.workspace = true
ratatui.workspace = true
tokio.workspace = true
tracing.workspace = true
jellyfin = { version = "0.1.4", path = "../../jellyfin-rs" }

[package]
edition = "2024"
name = "jellyhaj-fetch-view"
version = "0.1.0"
