[dependencies]
jellyfin = {path = "../../jellyfin-rs", version = "0.1.4"}
jellyhaj-core = {path = "../../jellyhaj-core", version = "0.1.0"}
jellyhaj-fetch-view = {path = "../fetch", version = "0.1.0"}
jellyhaj-home-screen-widget = {path = "../../widgets/home-screen", version = "0.1.0"}
tokio = {features = ["macros"], workspace = true}
color-eyre.workspace = true
futures-util.workspace = true

[package]
edition = "2024"
name = "jellyhaj-home-screen-view"
version = "0.1.0"


[lints]
workspace = true
